--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -26,7 +26,9 @@ source-repository head
 library
   exposed-modules:
       ActionSpaces
+      Analytics
       Components
+      Diagnostics
       Model
       Payoffs
       Types
