--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -41,6 +41,7 @@ library
   build-depends:
       base >=4.7 && <5
     , open-games-hs
+    , probability
   default-language: Haskell2010
 
 executable manifold-hedger-exe
@@ -54,6 +55,7 @@ executable manifold-hedger-exe
       base >=4.7 && <5
     , manifold-hedger
     , open-games-hs
+    , probability
   default-language: Haskell2010
 
 test-suite manifold-hedger-test
@@ -68,4 +70,5 @@ test-suite manifold-hedger-test
       base >=4.7 && <5
     , manifold-hedger
     , open-games-hs
+    , probability
   default-language: Haskell2010
