--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -32,6 +32,7 @@ library
       Model
       Parameterization
       Payoffs
+      Strategies
       Types
   other-modules:
       Paths_manifold_hedger
