--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -63,12 +63,14 @@ test-suite manifold-hedger-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ExpectedUtilitySpec
       Paths_manifold_hedger
   hs-source-dirs:
-      test
+      src/test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , manifold-hedger
     , open-games-hs
     , probability
