Correct aggregation by seller

--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -33,6 +33,7 @@ library
       Parameterization
       Payoffs
       Strategies
+      TestGame
       Types
   other-modules:
       Paths_manifold_hedger
