Changed import of probability distribution

--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -42,8 +42,13 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
     , open-games-hs
+    , path
+    , path-io
     , probability
+    , vector
   default-language: Haskell2010
 
 executable manifold-hedger-exe
@@ -55,9 +60,14 @@ executable manifold-hedger-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
     , manifold-hedger
     , open-games-hs
+    , path
+    , path-io
     , probability
+    , vector
   default-language: Haskell2010
 
 test-suite manifold-hedger-test
@@ -71,8 +81,13 @@ test-suite manifold-hedger-test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , cassava
     , hspec
     , manifold-hedger
     , open-games-hs
+    , path
+    , path-io
     , probability
+    , vector
   default-language: Haskell2010
