--- a/manifold-hedger/manifold-hedger.cabal
+++ b/manifold-hedger/manifold-hedger.cabal
@@ -33,7 +33,6 @@ library
       Parameterization
       Payoffs
       Strategies
-      TestGame
       Types
   other-modules:
       Paths_manifold_hedger
@@ -74,10 +73,9 @@ test-suite manifold-hedger-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      ExpectedUtilitySpec
       Paths_manifold_hedger
   hs-source-dirs:
-      src/test
+      test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
